Add patched groovy version 5.0.1 to make play precompile work again